tests/baselines/reference/superPropertyAccess.errors.txt
tests/cases/compiler/superPropertyAccess.ts(7,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/superPropertyAccess.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/superPropertyAccess.ts(21,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/compiler/superPropertyAccess.ts(23,15): error TS2341: Property 'p1' is private and only accessible within class 'MyBase'.
tests/cases/compiler/superPropertyAccess.ts(25,24): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/compiler/superPropertyAccess.ts(27,24): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/compiler/superPropertyAccess.ts(31,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/compiler/superPropertyAccess.ts(33,23): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


==== tests/cases/compiler/superPropertyAccess.ts (8 errors) ====
    class MyBase {
        m1(a: string) { return a; }
        private p1() { }
        m2: () => void = function () { }
        d1: number = 42;
        private d2: number = 42;
        get value() {return 0 }
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        set value(v: number) { }
            ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    
    class MyDerived extends MyBase {
    
        foo() {
            super.m1("hi");                                     // Should be allowed, method on base prototype
    
            var l2 = super.m1.bind(this);                       // Should be allowed, can access properties as well as invoke
    
            var x: (a: string) => string = super.m1;            // Should be allowed, can assign to var with compatible signature
    
            super.m2.bind(this);                                // Should error, instance property, not a public instance member function
                  ~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
    
            super.p1();                                         // Should error, private not public instance member function
                  ~~
!!! error TS2341: Property 'p1' is private and only accessible within class 'MyBase'.
    
            var l1 = super.d1;                                  // Should error, instance data property not a public instance member function
                           ~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
    
            var l1 = super.d2;                                  // Should error, instance data property not a public instance member function
                           ~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
    
            super.m1 = function (a: string) { return ""; };     // Should be allowed, we will not restrict assignment
    
            super.value = 0;                                    // Should error, instance data property not a public instance member function
                  ~~~~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
            
            var z = super.value;                                // Should error, instance data property not a public instance member function
                          ~~~~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    }